--- a/index.css
+++ b/index.css
@@ -9,6 +9,8 @@ body {
   align-items: center;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   background-color: #16a085;
   color: #fff;
 }
