--- a/index.css
+++ b/index.css
@@ -24,3 +24,23 @@ p {
   font-size: 2rem;
   font-family: 'Arial', sans-serif;
 }
+
+.foo {
+  float: left;
+  width: 20px;
+  height: 20px;
+  margin: 5px;
+  border: 1px solid rgba(0, 0, 0, .2);
+}
+
+.blue {
+  background: #13b4ff;
+}
+
+.purple {
+  background: #ab3fdd;
+}
+
+.wine {
+  background: #ae163e;
+}
