--- a/index.css
+++ b/index.css
@@ -32,14 +32,6 @@ p {
   border: 1px solid rgba(0, 0, 0, .2);
 }
 
-.blue {
-  background: #13b4ff;
-}
-
-.purple {
-  background: #ab3fdd;
-}
-
-.wine {
-  background: #ae163e;
+.processing {
+  background: rgb(255,255,255);
 }
