--- a/index.css
+++ b/index.css
@@ -56,8 +56,7 @@ p {
 .node--leaf {
   pointer-events: none;
 }
-
-.label .tooltiptext {
+ .tooltiptext {
   visibility: hidden;
   width: 120px;
   background-color: black;
