--- a/index.css
+++ b/index.css
@@ -51,6 +51,7 @@ p {
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
 }
 
-.node--leaf:hover {
-  display: none
+.node--root,
+.node--leaf {
+  pointer-events: none;
 }
