--- a/index.css
+++ b/index.css
@@ -56,26 +56,6 @@ p {
   pointer-events: none;
 }
 
-.label {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black;
-}
-
-.label #tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-
-  /* Position the tooltip */
-  position: absolute;
-  z-index: 1;
-}
-
-.label:hover #tooltiptext {
-  visibility: visible;
+.label:hover{
+  display: none;
 }
