--- a/index.css
+++ b/index.css
@@ -51,8 +51,7 @@ p {
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
 }
 
-.node--root,
-.node--leaf {
+.node--root{
   pointer-events: none;
 }
 
