--- a/index.css
+++ b/index.css
@@ -51,10 +51,11 @@ p {
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
 }
 
-.node--root{
+.node--root,
+.node--leaf {
   pointer-events: none;
 }
 
 .label:hover{
-  display: none;
+  display: inline;
 }
