--- a/index.css
+++ b/index.css
@@ -50,12 +50,8 @@ p {
   text-anchor: middle;
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
 }
-
+.label,
 .node--root,
 .node--leaf {
   pointer-events: none;
-}
-
-.label:hover{
-  visibility: visible;
 }
